assets/css/style.css
/* ... */
/*end hero*/

#about, #services, #portfolio, #testimonials, #contact {
  overflow-x: hidden;
  width: 100%;
}

h1 {
  font-size: 1.75rem;
}

h4 {
  font-size: 1rem;
}

.card {
  background-color: var(--card-color);
}

h5, .card-body {
  color: var(--card-font-color) !important;
}

/* Most Mobile Devices iphones */
@media (max-width:737px ) {
  .navbar {
    margin-top: 1rem;
  }
  .half-panel {
    width: 60%;
    height: 90%;
    margin-top: 40px;
    position: relative;
    left: 20%;
  }
  .nav-link {
    font-size: 1.75rem;
  }

  .custom-switch {
    transform: scale(1.6,1.6);
    margin-left: -50px;
    padding-top: 10px;
  }

  .blank-space {
    padding: 7px;
    visibility: visible;
  }

  /* .navbar {
    max-height: 80px;
  } */

  .hello {
    margin-top: 30px;
  }

  .learn-more {
    margin-top: 80px;
  }

  .testimonial1 .testi1 h5 {
    line-height: 30px;
    font-size: 1.1rem;
  }

  h4 {
    font-size: 1.3rem;
  }

  .card-body {
    height: 375px;
  }

  .card-body1 {
    height: 460px;
  }

 
}

.scrolled-down{
  transform:translateY(-100%); transition: all .3s ease-in-out !important;
  
  }
.scrolled-up{
  transform:translateY(0); transition: all .3s .3s ease-in-out !important;
  }

.navbar {
  z-index: 999;
  margin-top: -1px;
}

.navbar-blur-dark {
  z-index: 999;
  -webkit-backdrop-filter: blur(12px);
  backdrop-filter: blur(12px);
  background:rgba(0,0,0,0.5);
}

.navbar-blur {
  z-index: 999;
  -webkit-backdrop-filter: blur(10px);
  backdrop-filter: blur(10px);
}

.navbar-nav {
  align-items: center;
}

.navbar .nav-link:hover,
.navbar .nav-link:focus, 
 {
  color: var(--primary-color);
  text-decoration: none;
}

.navbar-brand {
  color: #fff;
}

/* .mobile-navbar-dropdown {
  max-height: 100%;
  margin-top: -14px;
}

.mobile-navbar-collapsed {
  max-height: 75px;
  margin-top: -14px;
} */


/* Change navbar styling on scroll Large Devices */
@media (min-width: 980px) and (max-width:1199px) {

  .half-panel {
    width: 100%;
    height: 80%;
    margin-top: 40px;
    position: relative;
  }
  h5 {
    line-height: 1rem;
  }

  .card-body {
    height: 50vw;
  }
}

@media (max-width: 415px){
  .half-panel {
    width: 90%;
    height: 100%;
    margin-top: 40px;
    position: relative;
    padding-bottom: 60px;
    left: 5%;
  }
  .btn {
    transform: scale(1.2,1.2);
  }
}

/* iPhones horizontal */
@media (max-height: 415px) {
  .display-4 {
    font-size: 2rem;
  }
  .lead {
    font-size: 1.25rem;
  }
  .nav-link {
    font-size: 1.5rem;
  }
  .custom-control {
    transform: scale(1.4,1.4);
    margin-right: 20px;
  }
  .fade-in-delay3 {
    margin-top: -8px !important;
  }
  .hello {
    margin-top: 16%;
  }
}

/* ipads */
@media (min-width: 750px) and (min-height: 767px) {
  .half-panel {
    width: 500px;
    height: 100%;
    margin-top: 40px;
    position: relative;
    padding-bottom: 60px;
    left: 13%;
  }
  .nav-link {
    font-size: 2rem;
  }
  .custom-control {
    transform: scale(1.8,1.8);
    padding-top: 8px;
    margin-left: -50px;
  }

  .hello {
    margin-top: 80px;
  }

  .lead {
    font-size: 1.75rem;
  }

  .learn-more {
    margin-top: 80px;
  }

  .btn {
    transform: scale(1.4,1.4);
  }
  .content {
    font-size: 1.5rem;
  }

  .display-4 {
    font-size: 4rem;
  }

  h4 {
    font-size: 2rem;
  }

  .list-items {
    font-size: 1.3rem;
  }

  .testimonial1 .testi1 h5 {
    line-height: 35px;
    font-size: 1.5rem;
  }

}
@media (max-width: 992px) {
  .custom-control{
    padding-bottom: 15px;
  }

}

@media (min-width: 1200px){
  .half-panel {
    max-width: 100%;
    height: 80%;
    margin-top: 40px;
    position: relative;
    padding-bottom: 60px;
    left: 5%;
  }
  .blank-space {
    visibility: hidden;
  }
  .navbar {
    max-height: 60px;
  }
  .nav-link {
    font-size: 1.25rem;
  }
  .custom-switch {
    transform: scale(1.2,1.2);
    margin-left: 25px;

  }

  .hello {
    margin-top: 50px;
    font-size: 3rem;
  }

  .lead {
    font-size: 1.8rem;
  }

  .btn {
    transform: scale(1,1);
  }

  #about{
    /* padding-top: 50px; */
    align-items: center;
  }

  .content{
    max-width: 100%;
  }

  h5 {
    line-height: 2.2rem !important;
  }

  .card-body {
    height: 34vw;
  }

}

@media (min-width: 1300px){
  .half-panel {
    width: 95%;
    height: 80%;
    margin-top: 90px;
    position: relative;
    padding-bottom: 60px;
    left: 5%;
  }

  .custom-control{
    margin-top: -12px;
  }

  h5 {
    line-height: 2.4rem !important;
  }

  .card-body {
    height: 30vw;
  }
}
/* Change navbar styling on scroll XLarge Devices */
@media (min-width: 1500px) {

  .half-panel {
    width: 80%;
    height: 100%;
    margin-top: 40px;
    position: relative;
}

h5 {
  line-height: 2.5rem !important;
}

.card-body {
  height: 25vw;
}
}

/* Change navbar styling on small viewports */
/* @media (max-width: 991.98px) {
  .navbar-toggler, .logo1 {margin-top: -4px;}
  .navbar .navbar-brand, .navbar .nav-link{
      color: #fff;
  }

.navbar.active .nav-link:hover,
.navbar.active .nav-link:focus {
  color: var(--primary-color);
  text-decoration: none;
}

.navbar.active .navbar-brand {
  color: #fff;
}
} */

.half-panel {
  width: 75%;
  height: 80%;
  margin-top: 40px;
  position: relative;
  padding-bottom: 60px;
  left: 5%;
}

.intro {
  padding-top: 8%;
  width: 100%;
}

.intro2 {
  padding-top: 4%;
  width: 100%;
}

.container {
  /* max-width: 100% !important; */
  padding-left: 0 !important;
  padding-right: 0 !important;
}

.content {
  text-indent: 10%;
  padding-left: 10%;
  padding-right: 2%;
  top: 1rem;
  line-height: 2;
}

.btn-primary {
  background-color: #5757bd;
  border-color:transparent;
  
}

.btn-primary:hover {
  background-color: #5c5cc9;
  border-color:transparent;
}

.btn-primary:active {
  background-color: #5c5cc9 !important;
  border-color:transparent !important;
}

.list-items li {
  padding-top: 1.5vh;
  padding-bottom: 1.5vh;
}
/* ... */

